--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Posts</h1>
+<p><%= @placeholder_text %></p>
 <ul>
   <% @posts.each do |post| %>
     <li><%= link_to post.title, post_path(post) %></li>
