--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Users</h1>
+<p><%= @placeholder_text %></p>
 <ul>
   <% @users.each do |user| %>
     <li><%= link_to user.name, user_path(user) %></li>
