Make requested changes

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
 <h1><%= @post.title %></h1>
-<p>By: <%= @post.user.name %></p>
-<p><%= @post.content %></p>
-<!-- Add more details about the post as needed -->
+<p>By: <%= @post.author.name %></p>
+<p><%= @post.text %></p>
