--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,30 @@
-<h1>All Users</h1>
-<p><%= @placeholder_text %></p>
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user_path(user) do %>
-        <%= user.name %>
-        <% if user.photo.present? %>
-          <img src="<%= user.photo %>" alt="User Photo" width="100px">
-        <% else %>
-          <p>No photo available</p>
-        <% end %>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>All Users</title>
+  <%= stylesheet_link_tag 'user', media: 'all' %>
+</head>
+<body>
+  <h1>All Users</h1>
+  <p><%= @placeholder_text %></p>
+  <ul class="users-list">
+    <% @users.each do |user| %>
+      <li class="user">
+        <div class="user-photo">
+          <%= link_to user_path(user) do %>
+            <% if user.photo.present? %>
+              <img src="<%= user.photo %>" alt="User Photo" width="100px">
+            <% else %>
+              <p>No photo available</p>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="user-details">
+          <h2><%= user.name %></h2>
+          <span>Number of posts: <%= user.posts.count %></span>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</body>
+</html>
