--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @post.title %></h1>
 <p>By: <%= @post.author.name %></p>
-<p><%= @post.content %></p>
+<p><%= @post.text %></p>
 <p>Comments: <%= @post.comments.count %>, Likes: <%= @post.likes.count %></p>
 
 <% @post.comments.each do |comment| %>
