--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>All Users</title>
-  <%= stylesheet_link_tag 'user', media: 'all' %>
+  <%= stylesheet_link_tag 'users', media: 'all' %>
 </head>
 <body>
   <h1>All Users</h1>
