--- a/app/views/users/post_show.html.erb
+++ b/app/views/users/post_show.html.erb
@@ -1,7 +1,25 @@
-<h1>Post <%= @post.id %> by <%= @post.author.name %></h1>
-<p><%= @post.content %></p>
-<p>Comments: <%= @post.comments.count %>, Likes: <%= @post.likes.count %></p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Post <%= @post.id %> by <%= @post.author.name %></title>
+  <link rel="stylesheet" href="/assets/users.css">
+</head>
+<body>
+  <!-- Post details container -->
+  <div class="post-details-container">
+    <h1>Post <%= @post.id %> by <%= @post.author.name %></h1>
+    <p><%= @post.content %></p>
+    <p>Comments: <%= @post.comments.count %>, Likes: <%= @post.likes.count %></p>
+  </div>
 
-<% @post.comments.each do |comment| %>
-  <p>Username: <%= comment.author.name %></p>
-<% end %>
+  <!-- Comments container -->
+  <div class="comments-container">
+    <% @post.comments.each do |comment| %>
+      <div class="comment">
+        <p>Username: <%= comment.author.name %></p>
+        <p>Comment: <%= comment.content %></p>
+      </div>
+    <% end %>
+  </div>
+</body>
+</html>
