--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<!-- users/show.html.erb -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,40 +6,43 @@
   <link rel="stylesheet" href="/assets/users.css">
 </head>
 <body>
-  <h1><%= @user.name %></h1>
-  <% if @user.photo.present? %>
-    <%= image_tag @user.photo %>
-  <% else %>
-    <p>No photo available</p>
-  <% end %>
-  <p><%= @user.bio %></p>
-  <p>Number of posts: <%= @user.posts.count %></p>
+  <div class="user-container">
+    <div class="user-image">
+      <% if @user.photo.present? %>
+        <%= image_tag @user.photo, alt: "Profile picture" %>
+      <% else %>
+        <p>No photo available</p>
+      <% end %>
+    </div>
+    <div class="user-details">
+      <h1><%= @user.name %></h1>
+      <div class="user-posts-counter">
+        <p>Number of posts: <%= @user.posts.count %></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="user-bio-container">
+    <p><%= @user.bio %></p>
+  </div>
 
   <% @user.posts.limit(3).each_with_index do |post, index| %>
     <div class="post-container">
       <h2>Post #<%= index + 1 %> by <%= post.author.name %></h2>
-      <p><%= post.text %></p>
+      <p><%= post.content %></p>
       <p>Comments: <%= post.comments.count %>, Likes: <%= post.likes.count %></p>
 
       <h3>Recent Comments:</h3>
       <ul class="comments-list">
         <% post.recent_comments.each do |comment| %>
-          <li><span>Username: <%= comment.author.name %></span>, Comment: <%= comment.text %></li>
+          <li><span>Username: <%= comment.author.name %></span>, Comment: <%= comment.text %></li> <!-- Change 'comment.content' to 'comment.text' -->
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <% @user.posts.limit(3).each_with_index do |post, index| %>
-    <div class="post-container">
-      <h2>Post #<%= index + 1 %> by <%= post.author.name %></h2>
-      <p><%= post.text %></p>
-      <p>Comments: <%= post.comments.count %>, Likes: <%= post.likes.count %></p>
-    </div>
-  <% end %>
-
-  <!-- "See All Posts" button linking to the user's posts index page -->
-  <%= link_to "See All Posts", all_posts_user_path(@user), class: "see-all-posts-button" %>
-
+  <div class="see-all-posts-container">
+    <%= link_to "See All Posts", all_posts_user_path(@user), class: "see-all-posts-button" %>
+  </div>
 </body>
 </html>
