Add styling and fix linters

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -82,3 +82,13 @@
 .like {
   margin: 15px;
 }
+
+.post-create {
+  margin-top: 20px;
+  text-align: center;
+  margin-inline: auto;
+}
+
+.like {
+  margin: 15px;
+}
