--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -168,3 +168,34 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+input {
+  padding: 10px;
+}
+
+/* Styles for the "Post" button */
+.common-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff; /* Blue background color */
+  color: #fff; /* White text color */
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-left: 10px ;
+}
+
+/* Optional: Add hover effect to the button */
+.common-btn:hover {
+  background-color: #0056b3; /* Darker shade of blue on hover */
+}
