--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 
   <% @user.posts.limit(3).each_with_index do |post, index| %>
     <div class="post-container">
-      <h2>Post #<%= index + 1 %> by <%= post.author.name %></h2>
+      <h2>Post #<%= index + 1 %> by <%= post.user.name %></h2>
       <p><%= post.text %></p>
       <p>Comments: <%= post.comments.count %>, Likes: <%= post.likes.count %></p>
 
