--- a/app/views/users/post_show.html.erb
+++ b/app/views/users/post_show.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Post <%= @post.id %> by <%= @post.author.name %></title>
+  <title>Post <%= @post.id %> by <%= @post.user.name %></title>
   <link rel="stylesheet" href="/assets/users.css">
 </head>
 <body>
   <!-- Post details container -->
   <div class="post-details-container">
-    <h1>Post <%= @post.id %> by <%= @post.author.name %></h1>
+    <h1>Post <%= @post.id %> by <%= @post.user.name %></h1>
     <p><%= @post.content %></p>
     <p>Comments: <%= @post.comments.count %>, Likes: <%= @post.likes.count %></p>
   </div>
@@ -16,7 +16,7 @@
   <div class="comments-container">
     <% @post.comments.each do |comment| %>
       <div class="comment">
-        <p>Username: <%= comment.author.name %></p>
+        <p>Username: <%= comment.user.name %></p>
         <p>Comment: <%= comment.content %></p>
       </div>
     <% end %>
