--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,23 @@
 <h1><%= @post.title %></h1>
 <p>By: <%= @post.user.name %></p>
-<p><%= @post.text %></p>
+<p class="post-text"><%= @post.text %></p>
 <p>Comments: <%= @post.comments.count %>, Likes: <%= @post.likes.count %></p>
 
 <div class="comment">
-    <%= form_with(model: Comment.new, url: user_post_comments_path(@post.user, @post)) do |form| %>
-      <%= form.text_area :text, placeholder: 'Enter your comment', rows: 4 %>
-      <%= form.submit 'Add Comment' %>
-    <% end %>
-  </div>
-
-  <div class="like">
-    <%= form_with(model: Like.new, url: user_post_likes_path(@post.user, @post)) do |form| %>
-      <%= form.submit 'Like' %>
-    <% end %>
-  </div>
-
-<% @post.comments.each do |comment| %>
-    <p>Username: <%= comment.author.name %></p>
+  <%= form_with(model: Comment.new, url: user_post_comments_path(@post.user, @post)) do |form| %>
+    <%= form.text_area :text, placeholder: 'Enter your comment', rows: 4 %>
+    <%= form.submit 'Add Comment' %>
   <% end %>
+</div>
+
+<div class="like">
+  <%= form_with(model: Like.new, url: user_post_likes_path(@post.user, @post)) do |form| %>
+    <%= form.submit 'Like' %>
+  <% end %>
+</div>
+
+<div class="comments-list">
+  <% @post.comments.each do |comment| %>
+    <p>Username: <%= comment.author.name %>, Comment: <%= comment.text %></p>
+  <% end %>
+</div>
