--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,10 +5,7 @@
   <%= stylesheet_link_tag 'users', media: 'all' %>
 </head>
 <body>
-  <h1>All Users</h1>
-  <p><%= @placeholder_text %></p>
-  <ul class="users-list">
-  <div class='post-button'><%= link_to "Post", new_user_post_path(current_user, current_user.id), class: 'common-btn' %></div>
+<%= button_to "Logout", destroy_user_session_path, method: :delete %>
     <% @users.each do |user| %>
       <li class="user">
         <div class="user-photo">
